--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="ICS2O-UNIT-5-07-HTML" />
   <meta name="keywords" content="mths, ics2o" />
-  <meta name="author" content="austin austin-scavone />
+  <meta name="author" content="austin austin-scavone/>
   <meta name="theme-color" content="#FFFFFF" />
-  <title>Add with looping</title>
+  <title>Add with integers</title>
   <link rel="canonical" href="https://austin-scavone.github.io/ICS2O-UNIT-5-07-HTML/" />
   <link rel="manifest" href="/ICS2O-UNIT-5-07-HTML/site.webmanifest" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -29,7 +29,7 @@
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="./js/script.js"></script>
-  <h1><b>Add with looping</b></h1>
+  <h1><b>Add with integers</b></h1>
   <br>
   <h4><b>Enter integer below:</b></h4>
   <br>
